...
    title = {
        Text(text = stringResource(R.string.app_name))
    },
    actions = {
        InfoButton(
            onClick = onAboutClick,
            modifier = Modifier.testTag("about_button"),
            contentDescription = "О приложении",
        )
    },
)


...
